[package]
name = "rustacuda_derive"
version = "0.1.0"
authors = ["Brook Heisler <brookheisler@gmail.com>"]

description = "Custom Derive Macro for Rustacuda"
repository = "https://github.com/bheisler/rustacuda"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"