[package]
name = "rustacuda_derive"
version = "0.1.1"
authors = ["Brook Heisler <brookheisler@gmail.com>"]
edition = "2018"

description = "Custom Derive Macro for RustaCUDA"
repository = "https://github.com/bheisler/RustaCUDA"
readme = "README.md"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"
